--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1751,7 +1751,7 @@ input[type=radio]:checked {
 -------------------------*/
 header {
   width: 100%;
-  height: 96px;
+  height: 100px;
   padding: 20px 0;
   background-color: #1B1B1B;
 }
@@ -4066,4 +4066,22 @@ strong{
   justify-content: center;
   align-items: center;
   height: 100%; /* Make sure the div has height */
+}
+.mobile-logo {
+  max-width: 100px; /* Adjust this value based on your preference */
+  height: auto;
+  display: block; /* Ensures the logo is centered if within a flex container */
+}
+
+@media (max-width: 768px) {
+  .mobile-logo {
+      max-width: 80px; /* Smaller logo for smaller devices */
+  }
+}
+
+/* Adjust the size or hide the logo for very small screens if needed */
+@media (max-width: 480px) {
+  .mobile-logo {
+      max-width: 60px;
+  }
 }
